--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/cloudflare": "^12.4.1",
     "@astrojs/mdx": "^4.2.4",
     "@astrojs/node": "^9.1.3",
     "@astrojs/rss": "^4.0.11",
