--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
+    "dev:remote": "astro dev --remote",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
     "@astrojs/cloudflare": "^12.4.1",
+    "@astrojs/db": "^0.14.11",
     "@astrojs/mdx": "^4.2.4",
     "@astrojs/node": "^9.1.3",
     "@astrojs/rss": "^4.0.11",
