--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
     "@astrojs/node": "^9.1.3",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.3.0",
-    "astro": "^5.6.2"
+    "@astrojs/vue": "^5.0.10",
+    "@types/canvas-confetti": "^1.9.0",
+    "@types/lodash.debounce": "^4.0.9",
+    "astro": "^5.6.2",
+    "canvas-confetti": "^1.9.3",
+    "lodash.debounce": "^4.0.8",
+    "vue": "^3.5.13"
   }
 }
