--- a/package.json
+++ b/package.json
@@ -6,21 +6,22 @@
     "dev": "astro dev",
     "dev:remote": "astro dev --remote",
     "build": "astro build",
-    "build:remote": "astro build --remote",
+    "build:remote": "npm run db:push && astro build --remote",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "db:push": "astro db push --remote"
   },
   "dependencies": {
-    "@astrojs/cloudflare": "^12.4.1",
+    "@astrojs/cloudflare": "12.5.0",
     "@astrojs/db": "^0.14.11",
     "@astrojs/mdx": "^4.2.4",
-    "@astrojs/node": "^9.1.3",
+    "@astrojs/node": "9.2.0",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.3.0",
     "@astrojs/vue": "^5.0.10",
     "@types/canvas-confetti": "^1.9.0",
     "@types/lodash.debounce": "^4.0.9",
-    "astro": "^5.6.2",
+    "astro": "5.7.2",
     "canvas-confetti": "^1.9.3",
     "lodash.debounce": "^4.0.8",
     "vue": "^3.5.13"
